# SPDX-FileCopyrightText: Copyright (c) 2023 Jack Wolfard
# SPDX-License-Identifier: Apache-2.0

[package]
name = "hanjie"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11.2"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
