# SPDX-FileCopyrightText: Copyright (c) 2023 Jack Wolfard
# SPDX-License-Identifier: Apache-2.0

[package]
name = "hanjie"
version = "0.1.0"
authors = ["Jack Wolfard"]
edition = "2021"
rust-version = "1.75"
description = "A nonogram game engine using Bevy"
documentation = "https://docs.rs/bevy"
readme = "README.md"
repository = "https://github.com/jackwolfard/hanjie"
license-file = "LICENSE"
keywords = ["nonogram", "picross", "griddlers", "puzzle"]
categories = ["game-development"]

[dependencies]
bevy = "0.11.2"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
