# SPDX-FileCopyrightText: 2023-2024 Jack Wolfard
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "hanjie"
version = "0.1.2"
authors = ["Jack Wolfard"]
edition = "2021"
rust-version = "1.76"
description = "A nonogram game engine using Bevy"
documentation = "https://docs.rs/bevy"
readme = "README.md"
repository = "https://github.com/jackwolfard/hanjie"
license = "Apache-2.0"
keywords = ["nonogram", "picross", "griddlers", "puzzle"]
categories = ["game-development"]

[dependencies]
bevy = "0.13"
bevy-inspector-egui = { version = "0.23", optional = true }

[features]
debug = []
inspect = ["dep:bevy-inspector-egui"]

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
